<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kurumsalFragment">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="182dp"
        android:layout_height="97dp"
        android:layout_marginTop="100dp"
        android:text="@string/girisyazisi"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/anaRenk"
        android:text="@string/girisbutonu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button3"
        android:layout_width="260dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#0FB81010"
        android:backgroundTintMode="@null"

        android:foreground="@null"
        android:text="@string/uyelik"
        android:textColor="@color/koyuRenk"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="168dp"
        android:background="@color/anaRenk"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#FAF5F5"
        android:src="@drawable/qrcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.100000024" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#FAF5F5"
        android:src="@drawable/banka"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton8"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.100000024" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="#FAF5F5"
        android:src="@drawable/money"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toStartOf="@+id/imageButton7"
        app:layout_constraintStart_toEndOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="97dp"
        android:layout_height="0dp"
        android:text="@string/QRbuton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="97dp"
        android:layout_height="70dp"
        android:text="@string/atmbuton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="97dp"
        android:layout_height="70dp"
        android:text="@string/cekbuton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />


</androidx.constraintlayout.widget.ConstraintLayout>